<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginTop="128dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="23dp"
    android:id="@+id/frAuth"
    tools:context=".AuthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/authorization_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="Title" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/authorization_subtitle"
            android:textColor="@color/black"
            tools:text="Subtitle" />

        <EditText
            android:id="@+id/tvPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="203dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:hint="+7 800 000 00 00"
            android:inputType="phone"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button_style"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/authorization_begin"
            tools:ignore="InvalidId" />

        <Button
            android:id="@+id/btSkip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/authorization_skip"
            android:textAllCaps="true"
            android:textColor="@color/destructive" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/authorization_conditions"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp"
            tools:text="Conditions" />
    </LinearLayout>

</FrameLayout>